tests/expectations/compiler/finalize/shadow_mapping_fail.out
Error [EAST0372017]: The name `bar` is defined multiple times.
    --> compiler-test:10:20
     |
   4 |       mapping bar: u8 => u8;
     |       ^^^^^^^^^^^^^^^^^^^^^^ previous definition of `bar` here
   ...
  10 |       transition foo(bar: u8) -> u8 {
     |                      ^^^ `bar` redefined here
Error [EAST0372017]: The name `bar` is defined multiple times.
    --> compiler-test:15:13
     |
   4 |       mapping bar: u8 => u8;
     |       ^^^^^^^^^^^^^^^^^^^^^^ previous definition of `bar` here
   ...
  15 |           let bar: u8 = a + 1u8;
     |               ^^^ `bar` redefined here
